10 June 2010: Wouter
	- Fix bug where a long loop could be entered, now cycle detection
	  has a loop-counter and maximum search amount.

4 June 2010: Wouter
	- iana portlist updated.
	- 1.4.5rc1 tag created.

3 June 2010: Wouter
	- ldns tarball updated, 1.6.5.
	- review comments, split dependency cycle tracking for parentside
	  last resort lookups for A and AAAA so there are more lookup options.

2 June 2010: Wouter
	- Fix compile warning if compiled without threads.
	- updated ldns-tarball with current ldns svn (pre 1.6.5).
	- GOST disabled-by-default, the algorithm number is allocated but the
	  RFC is still has to pass AUTH48 at the IETF.

1 June 2010: Wouter
	- Ignore Z flag in incoming messages too.
	- Fix storage of negative parent glue if that last resort fails.
	- libtoolize 2.2.6b, autoconf 2.65 applied to configure.
	- new splint flags for newer splint install.

31 May 2010: Wouter
	- Fix AD flag handling, it could in some cases mistakenly copy the AD 
	  flag from upstream servers.
	- alloc_special_obtain out of memory is not a fatal error any more,
	  enabling unbound to continue longer in out of memory conditions.
	- parentside names are dispreferred but not said to be dnssec-lame.
	- parentside check for cached newname glue.
	- fix parentside and querytargets modulestate, for dump_requestlist.
	- unbound-control-setup makes keys -rw-r--- so not all users permitted.
	- fix parentside from cache to be marked dispreferred for bad names.

28 May 2010: Wouter
	- iana portlist updated.
	- parent-child disagreement approach altered.  Older fixes are
	  removed in place of a more exhaustive search for misconfigured data
	  available via the parent of a delegation.
	  This is designed to be throttled by cache entries, with TTL from the
	  parent if possible.  Additionally the loop-counter is used.
	  It also tests for NS RRset differences between parent and child.
	  The fetch of misconfigured data should be more reliable and thorough.